--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 
 <body>
   <script>
-    window.location = "https://bingx-api.github.io/docs/#/swapV2/account-api.html";
+    window.location = "https://bingx-api.github.io/docs/#/swapV2/changelog";
   </script>
 </body>
 
