--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>BingX API Docs</title><style>/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=https://bingx.com/favicon.ico><title>BingX API Docs</title><style>/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
       * {
         box-sizing: border-box;
       }
