--- a/index.html
+++ b/index.html
@@ -1,236 +1,175 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=https://bingx.com/favicon.ico><title>BingX API Docs</title><style>/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-    * {
-      box-sizing: border-box;
-    }
+      * {
+        box-sizing: border-box;
+      }
+      html {
+        line-height: 1.15; /* 1 */
+        -webkit-text-size-adjust: 100%; /* 2 */
+        height: 100vh;
+      }
+      body {
+        margin: 0;
+        height: 100%;
+        font-family: 'HarmonyOS Sans SC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 22px;
+        color: #1A1A1A;
+        background-color: #ffffff;
+        overflow-x: hidden;
+      }
+      main {
+        display: block;
+      }
 
-    html {
-      line-height: 1.15;
-      /* 1 */
-      -webkit-text-size-adjust: 100%;
-      /* 2 */
-      height: 100vh;
-    }
+      h1 {
+        font-size: 2em;
+        /* margin: 0.67em 0; */
+        margin: 0;
+      }
+      hr {
+        box-sizing: content-box; /* 1 */
+        height: 0; /* 1 */
+        overflow: visible; /* 2 */
+      }
+      pre {
+        font-family: monospace, monospace; /* 1 */
+        font-size: 1em; /* 2 */
+      }
+      a {
+        background-color: transparent;
+        color: #3eaf7c;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      abbr[title] {
+        border-bottom: none; /* 1 */
+        text-decoration: underline; /* 2 */
+        text-decoration: underline dotted; /* 2 */
+      }     b,
+      strong {
+        font-weight: bolder;
+      }
+      code,
+      kbd,
+      samp {
+        font-family: monospace, monospace; /* 1 */
+        font-size: 1em; /* 2 */
+      }
 
-    body {
-      margin: 0;
-      height: 100%;
-      font-family: 'HarmonyOS Sans SC';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 22px;
-      color: #1A1A1A;
-      background-color: #ffffff;
-      overflow-x: hidden;
-    }
+      small {
+        font-size: 80%;
+      }
+      sub,
+      sup {
+        font-size: 75%;
+        line-height: 0;
+        position: relative;
+        vertical-align: baseline;
+      }
 
-    main {
-      display: block;
-    }
+      sub {
+        bottom: -0.25em;
+      }
 
-    h1 {
-      font-size: 2em;
-      /* margin: 0.67em 0; */
-      margin: 0;
-    }
+      sup {
+        top: -0.5em;
+      }
+      img {
+        border-style: none;
+      }
+      button,
+      input,
+      optgroup,
+      select,
+      textarea {
+        font-family: inherit; /* 1 */
+        font-size: 100%; /* 1 */
+        line-height: 1.15; /* 1 */
+        margin: 0; /* 2 */
+      }
+      button,
+      input { /* 1 */
+        overflow: visible;
+      }
+      button,
+      select { /* 1 */
+        text-transform: none;
+      }
+      button,
+      [type="button"],
+      [type="reset"],
+      [type="submit"] {
+        -webkit-appearance: button;
+      }
+      button::-moz-focus-inner,
+      [type="button"]::-moz-focus-inner,
+      [type="reset"]::-moz-focus-inner,
+      [type="submit"]::-moz-focus-inner {
+        border-style: none;
+        padding: 0;
+      }
+      button:-moz-focusring,
+      [type="button"]:-moz-focusring,
+      [type="reset"]:-moz-focusring,
+      [type="submit"]:-moz-focusring {
+        outline: 1px dotted ButtonText;
+      }
+      fieldset {
+        padding: 0.35em 0.75em 0.625em;
+      }
+      legend {
+        box-sizing: border-box; /* 1 */
+        color: inherit; /* 2 */
+        display: table; /* 1 */
+        max-width: 100%; /* 1 */
+        padding: 0; /* 3 */
+        white-space: normal; /* 1 */
+      }
+      progress {
+        vertical-align: baseline;
+      }
+      textarea {
+        overflow: auto;
+      }
+      [type="checkbox"],
+      [type="radio"] {
+        box-sizing: border-box; /* 1 */
+        padding: 0; /* 2 */
+      }
+      [type="number"]::-webkit-inner-spin-button,
+      [type="number"]::-webkit-outer-spin-button {
+        height: auto;
+      }
+      [type="search"] {
+        -webkit-appearance: textfield; /* 1 */
+        outline-offset: -2px; /* 2 */
+      }
 
-    hr {
-      box-sizing: content-box;
-      /* 1 */
-      height: 0;
-      /* 1 */
-      overflow: visible;
-      /* 2 */
-    }
+      [type="search"]::-webkit-search-decoration {
+        -webkit-appearance: none;
+      }
+      ::-webkit-file-upload-button {
+        -webkit-appearance: button; /* 1 */
+        font: inherit; /* 2 */
+      }
+      details {
+        display: block;
+      }
+      summary {
+        display: list-item;
+      }
+      template {
+        display: none;
+      }
 
-    pre {
-      font-family: monospace, monospace;
-      /* 1 */
-      font-size: 1em;
-      /* 2 */
-    }
-
-    a {
-      background-color: transparent;
-      color: #3eaf7c;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    abbr[title] {
-      border-bottom: none;
-      /* 1 */
-      text-decoration: underline;
-      /* 2 */
-      text-decoration: underline dotted;
-      /* 2 */
-    }
-
-    b,
-    strong {
-      font-weight: bolder;
-    }
-
-    code,
-    kbd,
-    samp {
-      font-family: monospace, monospace;
-      /* 1 */
-      font-size: 1em;
-      /* 2 */
-    }
-
-    small {
-      font-size: 80%;
-    }
-
-    sub,
-    sup {
-      font-size: 75%;
-      line-height: 0;
-      position: relative;
-      vertical-align: baseline;
-    }
-
-    sub {
-      bottom: -0.25em;
-    }
-
-    sup {
-      top: -0.5em;
-    }
-
-    img {
-      border-style: none;
-    }
-
-    button,
-    input,
-    optgroup,
-    select,
-    textarea {
-      font-family: inherit;
-      /* 1 */
-      font-size: 100%;
-      /* 1 */
-      line-height: 1.15;
-      /* 1 */
-      margin: 0;
-      /* 2 */
-    }
-
-    button,
-    input {
-      /* 1 */
-      overflow: visible;
-    }
-
-    button,
-    select {
-      /* 1 */
-      text-transform: none;
-    }
-
-    button,
-    [type="button"],
-    [type="reset"],
-    [type="submit"] {
-      -webkit-appearance: button;
-    }
-
-    button::-moz-focus-inner,
-    [type="button"]::-moz-focus-inner,
-    [type="reset"]::-moz-focus-inner,
-    [type="submit"]::-moz-focus-inner {
-      border-style: none;
-      padding: 0;
-    }
-
-    button:-moz-focusring,
-    [type="button"]:-moz-focusring,
-    [type="reset"]:-moz-focusring,
-    [type="submit"]:-moz-focusring {
-      outline: 1px dotted ButtonText;
-    }
-
-    fieldset {
-      padding: 0.35em 0.75em 0.625em;
-    }
-
-    legend {
-      box-sizing: border-box;
-      /* 1 */
-      color: inherit;
-      /* 2 */
-      display: table;
-      /* 1 */
-      max-width: 100%;
-      /* 1 */
-      padding: 0;
-      /* 3 */
-      white-space: normal;
-      /* 1 */
-    }
-
-    progress {
-      vertical-align: baseline;
-    }
-
-    textarea {
-      overflow: auto;
-    }
-
-    [type="checkbox"],
-    [type="radio"] {
-      box-sizing: border-box;
-      /* 1 */
-      padding: 0;
-      /* 2 */
-    }
-
-    [type="number"]::-webkit-inner-spin-button,
-    [type="number"]::-webkit-outer-spin-button {
-      height: auto;
-    }
-
-    [type="search"] {
-      -webkit-appearance: textfield;
-      /* 1 */
-      outline-offset: -2px;
-      /* 2 */
-    }
-
-    [type="search"]::-webkit-search-decoration {
-      -webkit-appearance: none;
-    }
-
-    ::-webkit-file-upload-button {
-      -webkit-appearance: button;
-      /* 1 */
-      font: inherit;
-      /* 2 */
-    }
-
-    details {
-      display: block;
-    }
-
-    summary {
-      display: list-item;
-    }
-
-    template {
-      display: none;
-    }
-
-    [hidden] {
-      display: none;
-    }
-
-    .search-results {
-      right: 10px;
-      max-width: 600px;
-    }</style><link href=./static/css/app.51454385d8f7b1843b5562637434acf2.css rel=stylesheet><link href=./static/css/app.51454385d8f7b1843b5562637434acf2.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.a6fb90f760467d0b53e5.js></script><script type=text/javascript src=./static/js/vendor.f0bf8159b965e8d36482.js></script><script type=text/javascript src=./static/js/app.65d3757f4332200a6d40.js></script><script type=text/javascript src=./static/js/manifest.a6fb90f760467d0b53e5.js></script><script type=text/javascript src=./static/js/vendor.f0bf8159b965e8d36482.js></script><script type=text/javascript src=./static/js/app.3212155c1afb31bba06a.js></script></body></html>
+      [hidden] {
+        display: none;
+      }
+      .search-results {
+        right: 10px;
+        max-width: 600px;
+      }</style><link href=./static/css/app.51454385d8f7b1843b5562637434acf2.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.a6fb90f760467d0b53e5.js></script><script type=text/javascript src=./static/js/vendor.f0bf8159b965e8d36482.js></script><script type=text/javascript src=./static/js/app.6e5e474ec2300f547002.js></script></body></html>
